<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>kinova_driver_ros2</name>
	<version>0.0.0</version>
	<description>
          The ROS Kinova driver provides a ROS2 interface for the Kinova Robotics
          robotic manipulator arms. This stack provides access to the Kinova
          C++ hardware API through ROS.
	</description>
	<maintainer email="jijin@jijin.todo">matsu4</maintainer>
	<license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>ros2launch</exec_depend>

	<depend>actionlib</depend>
	<depend>actionlib_msgs</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>trajectory_msgs</depend>
	<depend>kinova_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>control_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
	<depend>tf2_geometry_msgs</depend>
	<depend>interactive_markers</depend>
	<depend>visualization_msgs</depend>
	<depend>angles</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
