<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>kinova_msgs_ros2</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="jijin@jijin.todo">matsu4</maintainer>
	<license>TODO: License declaration</license>

	<depend>geometry_msgs</depend> <!--ros2 msgs depends-->
	<depend>actionlib_msgs</depend> <!--ros2 msgs depends-->
	<buildtool_depend>rosidl_default_generators</buildtool_depend> <!--builder of ros2 msgs-->>
	<exec_depend>rosidl_default_runtime</exec_depend> <!--builder of ros2 msgs-->>
	<member_of_group>rosidl_interface_packages</member_of_group> <!--builder of ros2 msgs-->>
	
	<buildtool_depend>ament_cmake</buildtool_depend>
	
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
